# bench-ai

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/.github/workflows/: ci.yml
src/handlers/: health.rs  mod.rs  models.rs
src/models/: model.rs  model_tests.rs
tests/: integration_test.rs  model_tests.rs
